# AURA

./: .gitignore  .gitmodules  INTERNVLA_SYSTEM2_SETUP.md  MIGRATION_LOG.md  NAVDP_G1_POINTGOAL.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_NOTES.md  RUNNING.md  agents.md  articulation_scan.txt  audit_eagle_processor.py  camera_paths_scan.txt  check_internvla_session.py  check_internvla_session_windows.bat  diagnose_joint_mapping.py  g1_joint_names_scan.txt  inspect_g1_joints.py  inspect_sonic_onnx.py  modern_apartment_habitat.report.json  pipeline_test_utils.py  play_g1_internvla_navdp.py  play_g1_keyboard_onnx.py  pyproject.toml  run_g1_object_search_demo.ps1  run_g1_pointgoal.ps1  run_gui.sh  run_internvla_nav_server_windows.bat  run_internvla_system2.ps1  run_navdp_server.ps1  run_navdp_server_windows.bat  run_pipeline.ps1  run_pipeline.sh  run_semantic_slam.sh  run_sim_g1_internvla_navdp_windows.bat  run_vlm_dual_server.ps1  serve_internvla_nav_server.py  sonic_policy_server.py  telemetry_runtime.py  test_closed_loop_60s.py  (+6 more)
AURA/: .gitignore  benchmark.py  pyproject.toml
configs/: common.yaml  server_dev.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  DECOUPLED_WBC_ISAAC_BRIDGE.md  PROJECT_LAYOUT.md  README.md  RUNBOOK_WINDOWS.md  TOPICS_AND_FRAMES.md  architecture.md
frontend/: package-lock.json  package.json
g1/: g1_d455.usd
gear_sonic_deploy/: .gitattributes  README.md
ros2_ws_orbslam3/: colcon.defaults.yaml
ros2_ws_orbslam3/src/autonomy_stack/: package.xml  setup.cfg  setup.py
ros2_ws_orbslam3/src/autonomy_stack/autonomy_stack/: depth_costmap.py  frontier_explorer_node.py  local_controller.py  navigator_node.py  params.py  planner_astar.py  pose_tf_bridge_node.py  recovery.py  ros_io.py  semantic_fusion_node.py  sparse_map_occupancy_node.py  tf_manager.py  yoloe_semantic_node.py
ros2_ws_orbslam3/src/autonomy_stack/config/: autonomy.yaml  frontier_explorer.yaml  nav2_orbslam.yaml
ros2_ws_orbslam3/src/autonomy_stack/launch/: autonomy.launch.py  nav2_orbslam.launch.py
ros2_ws_orbslam3/src/autonomy_stack/resource/: autonomy_stack
scripts/: prepare_groot_fp8.py  run_dashboard.ps1  run_dashboard.sh  run_groot_policy_server_fp8.py  run_system.ps1  run_windows_fullstack.ps1  serve_planner_qwen3_nothink.ps1  start_agent_runtime_no_physics_occupancy.ps1  start_all.ps1  start_all_with_groot_and_realtime.ps1  start_decoupled_wbc_isaac_bridge.ps1  start_decoupled_wbc_isaac_gui_only.ps1  start_decoupled_wbc_keyboard_planner.ps1  start_decoupled_wbc_keyboard_planner_gui.ps1  start_g1_sonic_groot.ps1  start_groot_realtime.ps1  start_isaacsim_simple.ps1  start_ros_wsl.sh  start_sonic_only.ps1  start_sonic_server.ps1  sync_decoupled_wbc_isaac_bridge_bundle.ps1  validate_look_at_pipeline.py
server/: vis_server_ws.py  webrtc_server.py
src/: __init__.py
sub/: README.md  control.md  inference.md  navigation.md  perception.md  planner.md  simulation.md  transport.md  world-state.md
test/: scene_graph_viz.py  test.html
tests/: conftest.py  test_async_planners.py  test_aura_runtime_args.py  test_aura_runtime_dashboard_controls.py  test_backend.py  test_backend_session_manager.py  test_backend_webrtc_config.py  test_backend_webrtc_subscriber.py  test_backend_webrtc_tracks.py  test_control_runtime_controller.py  test_dual_orchestrator.py  test_g1_bridge_args.py  test_global_route.py  test_history_clients.py  test_inference_planner_server.py  test_inference_stack_server.py  test_locomotion_policy_runtime.py  test_memory_stm.py  test_navdp_follower.py  test_navdp_http.py  test_navigation_runtime_aliases.py  test_navigation_service.py  test_object_search_helpers.py  test_perception_observation.py  test_planner_session_interactive.py  test_planner_tasking.py  test_runtime.py  test_runtime_coordinator.py  test_runtime_planner_status.py  test_subgoal_executor_planner_managed.py  test_subsystem_architecture.py  test_supervisor_module_split.py  test_target_runtime_entrypoints.py  test_target_runtime_paths.py  test_trajectory_tracker.py
tmp/: ros2_probe.out  (+24 more)
(+1583 files in other folders)
