[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac-aura"
version = "0.0.0"
description = "Subsystem-oriented Isaac Aura runtime packages."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "simulation",
    "simulation.*",
    "systems",
    "systems.*",
]
